[gd_scene load_steps=23 format=3 uid="uid://01cq3ethui3i"]

[ext_resource type="Script" path="res://characters/baseCharacter/player.gd" id="1_a7jnc"]
[ext_resource type="Texture2D" uid="uid://sj5fu2ew5m3q" path="res://assets/Game Icon.png" id="2_3j21r"]
[ext_resource type="Texture2D" uid="uid://c4d5yscb1wfim" path="res://assets/Images/frame.png" id="3_dgpq8"]
[ext_resource type="PackedScene" uid="uid://beuglkms01sq6" path="res://ui/passive_slot.tscn" id="3_ipme1"]
[ext_resource type="PackedScene" uid="uid://pgbdho2yu1br" path="res://ui/slot.tscn" id="5_0asyh"]
[ext_resource type="FontFile" uid="uid://c4o2mmlfx4faa" path="res://themes/PressStart2P.ttf" id="6_2xppr"]
[ext_resource type="Script" path="res://ui/optionsupgrade.gd" id="6_tq6tw"]
[ext_resource type="Theme" uid="uid://iivwh67cjc1k" path="res://scenes/UI/base_theme.tres" id="8_p8ppg"]
[ext_resource type="PackedScene" uid="uid://rtn180tpi6kf" path="res://core/effects/walksmoke.tscn" id="8_ubk1n"]
[ext_resource type="PackedScene" uid="uid://s5diqyt5yw74" path="res://common/item_magnet/item_magnet.tscn" id="9_ie3pg"]
[ext_resource type="Script" path="res://ui/debug_ui.gd" id="10_sly3d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rmv6b"]
texture = ExtResource("3_dgpq8")
texture_margin_left = 16.0
region_rect = Rect2(8, 0, 837, 710)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6lrtq"]
texture = ExtResource("3_dgpq8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v32mk"]
texture = ExtResource("3_dgpq8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gfd01"]
texture = ExtResource("3_dgpq8")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
region_rect = Rect2(8, 8, 832, 696)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yqbvg"]
texture = ExtResource("3_dgpq8")
texture_margin_left = 9.0
texture_margin_top = 21.0
texture_margin_right = 14.0
texture_margin_bottom = 10.0
region_rect = Rect2(14, 2, 824, 698)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1ly4"]
bg_color = Color(0.61, 0.38064, 0.3172, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.676167, 0.33, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqw0p"]
bg_color = Color(0.74, 0, 0.0863334, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pmqcd"]
bg_color = Color(0.6, 0.4, 0.6, 0.47451)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.678431, 0.333333, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eu6t1"]
bg_color = Color(0.6, 0, 0.6, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ha4uq"]
bg_color = Color(1, 0.678431, 0.333333, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 180
corner_radius_top_right = 180
corner_radius_bottom_right = 180
corner_radius_bottom_left = 180

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5wi5q"]
radius = 8.0
height = 16.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 10
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_a7jnc")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Separator2" type="Panel" parent="HUD"]
z_index = 11
offset_left = 368.0
offset_top = 565.0
offset_right = 376.0
offset_bottom = 639.0
theme_override_styles/panel = SubResource("StyleBoxTexture_rmv6b")

[node name="Separator" type="Panel" parent="HUD"]
z_index = 11
offset_left = 704.0
offset_top = 565.0
offset_right = 712.0
offset_bottom = 639.0
theme_override_styles/panel = SubResource("StyleBoxTexture_rmv6b")

[node name="Weapons" type="HBoxContainer" parent="HUD"]
custom_minimum_size = Vector2(35, 35)
offset_left = 384.0
offset_top = 592.0
offset_right = 692.0
offset_bottom = 627.0

[node name="Slot" parent="HUD/Weapons" instance=ExtResource("5_0asyh")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lrtq")
slotPosition = Vector2(0, -24)

[node name="Slot2" parent="HUD/Weapons" instance=ExtResource("5_0asyh")]
z_index = 10
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lrtq")
slotPosition = Vector2(16, -16)

[node name="Slot3" parent="HUD/Weapons" instance=ExtResource("5_0asyh")]
z_index = 10
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lrtq")
slotPosition = Vector2(24, 0)

[node name="Slot4" parent="HUD/Weapons" instance=ExtResource("5_0asyh")]
z_index = 10
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lrtq")
slotPosition = Vector2(16, 16)

[node name="Slot5" parent="HUD/Weapons" instance=ExtResource("5_0asyh")]
z_index = 10
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lrtq")
slotPosition = Vector2(0, 24)

[node name="Slot6" parent="HUD/Weapons" instance=ExtResource("5_0asyh")]
z_index = 10
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lrtq")
slotPosition = Vector2(-16, 16)

[node name="Slot7" parent="HUD/Weapons" instance=ExtResource("5_0asyh")]
z_index = 10
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lrtq")
slotPosition = Vector2(-24, 0)

[node name="Slot8" parent="HUD/Weapons" instance=ExtResource("5_0asyh")]
z_index = 10
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6lrtq")
slotPosition = Vector2(-16, -16)

[node name="Passives" type="HBoxContainer" parent="HUD"]
offset_left = 720.0
offset_top = 592.0
offset_right = 1028.0
offset_bottom = 627.0

[node name="PassiveSlot" parent="HUD/Passives" instance=ExtResource("3_ipme1")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v32mk")

[node name="PassiveSlot2" parent="HUD/Passives" instance=ExtResource("3_ipme1")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v32mk")

[node name="PassiveSlot3" parent="HUD/Passives" instance=ExtResource("3_ipme1")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v32mk")

[node name="PassiveSlot4" parent="HUD/Passives" instance=ExtResource("3_ipme1")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v32mk")

[node name="PassiveSlot5" parent="HUD/Passives" instance=ExtResource("3_ipme1")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v32mk")

[node name="PassiveSlot6" parent="HUD/Passives" instance=ExtResource("3_ipme1")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v32mk")

[node name="PassiveSlot7" parent="HUD/Passives" instance=ExtResource("3_ipme1")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v32mk")

[node name="PassiveSlot8" parent="HUD/Passives" instance=ExtResource("3_ipme1")]
z_index = 10
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v32mk")

[node name="PlayerUi" type="HBoxContainer" parent="HUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="Panel" type="Panel" parent="HUD/PlayerUi"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gfd01")

[node name="Portrait" type="TextureRect" parent="HUD/PlayerUi/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 87.0
offset_bottom = 87.0
texture = ExtResource("2_3j21r")
expand_mode = 1

[node name="Panel2" type="Panel" parent="HUD/PlayerUi"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_yqbvg")

[node name="StatusBars" type="VBoxContainer" parent="HUD/PlayerUi/Panel2"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
offset_left = 12.0
offset_top = 28.0
offset_right = 262.0
offset_bottom = 82.0
size_flags_vertical = 8

[node name="HpBar" type="ProgressBar" parent="HUD/PlayerUi/Panel2/StatusBars"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_e1ly4")
theme_override_styles/fill = SubResource("StyleBoxFlat_tqw0p")
value = 50.0
show_percentage = false

[node name="XpBar" type="ProgressBar" parent="HUD/PlayerUi/Panel2/StatusBars"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_pmqcd")
theme_override_styles/fill = SubResource("StyleBoxFlat_eu6t1")
value = 50.0
show_percentage = false

[node name="Panel3" type="Panel" parent="HUD/PlayerUi"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gfd01")

[node name="Portrait" type="TextureRect" parent="HUD/PlayerUi/Panel3"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 87.0
offset_bottom = 87.0
texture = ExtResource("2_3j21r")
expand_mode = 1

[node name="Level" type="MarginContainer" parent="HUD"]
offset_left = 75.0
offset_top = 619.0
offset_right = 99.0
offset_bottom = 643.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="HUD/Level"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ha4uq")

[node name="Level" type="Label" parent="HUD/Level/Panel"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 24.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("6_2xppr")
theme_override_font_sizes/font_size = 10
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="HBoxContainer" parent="HUD" node_paths=PackedStringArray("weapons", "passives")]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_tq6tw")
weapons = NodePath("../Weapons")
passives = NodePath("../Passives")

[node name="Label" type="Label" parent="HUD"]
offset_left = 472.0
offset_top = 568.0
offset_right = 584.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("6_2xppr")
text = "WEAPONS"

[node name="Label2" type="Label" parent="HUD"]
offset_left = 808.0
offset_top = 568.0
offset_right = 936.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("6_2xppr")
text = "PASSIVES"

[node name="DebugUI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("10_sly3d")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme = ExtResource("8_p8ppg")

[node name="Label9" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "maxHitpoints:"

[node name="Label3" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "movementspeed:"

[node name="Label4" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "might"

[node name="Label5" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "armor"

[node name="Label6" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "magnet_area"

[node name="Label7" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "area_multiplier"

[node name="Label8" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "growth"

[node name="Label2" type="Label" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "Enemy Count:"

[node name="PlayerBodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_5wi5q")

[node name="GPUParticles2D" parent="." instance=ExtResource("8_ubk1n")]

[node name="Item_Magnet" parent="." instance=ExtResource("9_ie3pg")]

[editable path="Item_Magnet"]
